# fem2d-inverse

./: CMakeLists.txt  NOTE_TO_SELF  README.md  TODO
include/: .mesh.h.swp  cg.h  (+17 more)
src/: .inverse_problem_sam.cpp.swp  CMakeLists.txt  Makefile  T_target.tec  cmake_install.cmake  contour_plot.pvsm  final.tec  generate_initial_geometry.cpp  inverse_problem_sacvm.cpp  inverse_problem_sam.cpp  makefile  makefile-g++  makefile-icpc  plot_initial_guess.py  target_geometry
src/step_size_study/: driver.py  post_process.py
src/step_size_study/dr-06/: final.tec  inverse_problem_sacvm.out  inverse_problem_sam.out  step_size.inp
src/step_size_study/dr-08/: final.tec  initial.tec  inverse_problem_sacvm.out  inverse_problem_sam.out  step_size.inp
src/step_size_study/dr-10/: final.tec  inverse_problem_sacvm.out  inverse_problem_sam.out  step_size.inp
src/step_size_study/dr-11/: final.tec  inverse_problem_sacvm.out  inverse_problem_sam-old.out  inverse_problem_sam.out  step_size.inp
src/step_size_study/dr-12/: inverse_problem_sacvm.out  inverse_problem_sam.out  step_size.inp
src/step_size_study/dr-13/: inverse_problem_sacvm.out  inverse_problem_sam.out  step_size.inp
src/step_size_study/dr-14/: inverse_problem_sacvm.out  inverse_problem_sam.out  step_size.inp
src/step_size_study/dr-15/: inverse_problem_sacvm.out  inverse_problem_sam.out  step_size.inp
src/step_size_study/dr-16/: final.tec  inverse_problem_sacvm.out  inverse_problem_sam.out  step_size.inp
src/step_size_study/dr-17/: inverse_problem_sacvm  inverse_problem_sacvm.out  inverse_problem_sam  step_size.inp
(+15 files in other folders)
