cmake_minimum_required(VERSION 3.6)
project(fem2d)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
add_executable(generate_initial_geometry generate_initial_geometry.cpp)
add_executable(inverse_problem_sam inverse_problem_sam.cpp)
add_executable(inverse_problem_sacvm inverse_problem_sacvm.cpp)
target_link_libraries(generate_initial_geometry armadillo)
target_link_libraries(inverse_problem_sam armadillo)
target_link_libraries(inverse_problem_sacvm armadillo)
